# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../multimodalinput_mini.gni")

config("input_service_prototype_configs") {
  include_dirs = [
    "include",
    "${root_out_dir}/diff_libinput_mmi/export_include",
    "${mmi_path}/libudev/include",
    "${mmi_path}/service/common/include",
    "${mmi_path}/service/connect_manager/include",
    "${mmi_path}/service/delegate_task/include",
    "${mmi_path}/service/device_manager/include",
    "${mmi_path}/service/event_handler/include",
    "${mmi_path}/service/key_event_normalize/include",
    "${mmi_path}/service/module_loader/include",
    "${mmi_path}/service/monitor/include",
    "${mmi_path}/service/nap_process/include",
    "${mmi_path}/service/common/timer_manager/include",
    "${mmi_path}/service/touch_event_normalize/include",
    "${mmi_path}/service/window_manager/include",
    "${mmi_path}/util/common/include",
  ]
}

ohos_source_set("input_service_prototype") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = []

  sources = []

  configs = [ ":input_service_prototype_configs" ]

  public_configs = [ ":input_service_prototype_configs" ]

  deps = []

  external_deps = []

  part_name = "${mmi_part_name}"
  subsystem_name = "${mmi_subsystem_name}"
}
